# text-to-sql

./: README.md  main.py  pyproject.toml
