[tool.poetry]
name = "text-to-sql"
version = "0.1.0"
description = ""
authors = ["Eugene Park <parkeugene7676@gmail.com>"]
readme = "README.md"
packages = [{include = "text_to_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.2"
psycopg2 = "^2.9.9"
langchain-community = "^0.3.1"
langchain-core = "^0.3.9"
langchain-openai = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
